--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h1,ul,li{
 
 }
 ul{
-    margin-left: 20%;
+    margin-left: 0;
 }
 li{
     color: gray;
@@ -62,6 +62,7 @@ input{
     margin-top: 20px;
 
 }
+
 
 
 
